--- a/Project_7_pc2/Application.html
+++ b/Project_7_pc2/Application.html
@@ -10,6 +10,8 @@
         fieldset {border-color: red; background-color: lightcoral; border-width: 10px; border-style: solid; width: 720px; }
         textarea {width: 360px; height: 50px}
         label:hover {font-size: 40px}
+        table{align-content: center;}
+        body{ color: blue;}
     </style>
 </head>
 <body>
